// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatTableCheckbox "th" is passed in via the "as" prop renders to match the expected styling for a "th" element when it is passed via the "as" prop 1`] = `
.c5 + .c4 {
  margin-top: 16px;
}

.c5.c5.c5 {
  margin-bottom: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  cursor: pointer;
  opacity: 0;
  margin: 0;
  position: relative;
  z-index: 999;
}

.c9 {
  display: inline-block;
  position: relative;
}

.c3 .c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .c15 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 0;
  width: auto;
}

.c3 .c15 .c16,
.c3 .c15 .c17 {
  color: rgba(0,0,0,0.65);
  vertical-align: middle;
}

.c3 .c15 .c16:hover,
.c3 .c15 .c17:hover,
.c3 .c15 .c16:focus,
.c3 .c15 .c17:focus {
  color: rgba(0,0,0,0.9);
}

.c3 .c14 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c2 {
  margin-bottom: 0;
}

.c2 .c8 {
  padding-top: 1px;
}

.c2 .c12 {
  height: 16px;
}

.c2 svg {
  background-color: #FFFFFF;
  border: 1px solid #668592;
}

.c2 .c10,
.c2 svg {
  height: 16px;
  position: absolute;
  padding: 1px;
}

.c2 .c8,
.c2 .c10,
.c2 .c12,
.c2 svg {
  box-sizing: border-box;
  min-width: 16px;
  width: 16px;
}

.c2 .c10:not([disabled]):focus + .c12,
.c2 .c10:not([disabled]):hover + .c12 {
  box-shadow: 0 0 0 3px #FFB500;
}

.c2 .c15 {
  width: auto;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c2 .c14 {
  margin-left: 16px;
  margin-top: 0;
  padding-left: 8px;
}

.c2 .c17 {
  position: relative;
  display: inline-block;
}

.c2 .c10:checked ~ .c12 svg path {
  fill: rgba(0,0,0,0.90);
}

.c13 .c1 {
  padding-top: 0px;
}

.c0 {
  background-color: transparent;
  border-width: 0;
  border-bottom: 1px solid #CCD6DB;
  box-sizing: border-box;
  font-weight: 700;
  left: auto;
  padding: 8px 24px;
  text-align: left;
  top: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 18px;
}

.c0 .c1 {
  padding-top: 0px;
}

<th
  className="c0"
  data-element="flat-table-checkbox-header"
>
  <div
    className="c1 c2"
    data-component="checkbox"
    name="flat-table-checkbox"
    onClick={[Function]}
  >
    <div
      className="c3"
      name="flat-table-checkbox"
      onClick={[Function]}
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <input
              aria-describedby="guid-12345-help"
              aria-labelledby="guid-12345-label"
              className="c10 c11"
              id="guid-12345"
              name="flat-table-checkbox"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="checkbox"
              type="checkbox"
            />
            <div
              className="c12 "
            >
              <svg
                focusable="false"
                height="10"
                viewBox="0 0 12 10"
                width="12"
              >
                <path
                  d="M.237 6.477A.752.752 0 0 1 .155 5.47l.851-1.092a.63.63 0 0 1 .934-.088l2.697 1.964, 4.674-6a.63.63 0 0 1 .933-.088l1.015.917c.28.254.317.703.081 1.005L6.353 8.492a.725.725, 0 0 1-.095.16l-.85 1.093a.637.637 0 0 1-.626.244.638.638 0 0 1-.335-.16L.237 6.476z"
                  fill="#FFFFFF"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</th>
`;

exports[`FlatTableCheckbox the "as" prop is not passed in renders to match the expected styling for a "td" element 1`] = `
.c5 + .c4 {
  margin-top: 16px;
}

.c5.c5.c5 {
  margin-bottom: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  cursor: pointer;
  opacity: 0;
  margin: 0;
  position: relative;
  z-index: 999;
}

.c9 {
  display: inline-block;
  position: relative;
}

.c3 .c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .c14 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 0;
  width: auto;
}

.c3 .c14 .c15,
.c3 .c14 .c16 {
  color: rgba(0,0,0,0.65);
  vertical-align: middle;
}

.c3 .c14 .c15:hover,
.c3 .c14 .c16:hover,
.c3 .c14 .c15:focus,
.c3 .c14 .c16:focus {
  color: rgba(0,0,0,0.9);
}

.c3 .c13 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c2 {
  margin-bottom: 0;
}

.c2 .c8 {
  padding-top: 1px;
}

.c2 .c12 {
  height: 16px;
}

.c2 svg {
  background-color: #FFFFFF;
  border: 1px solid #668592;
}

.c2 .c10,
.c2 svg {
  height: 16px;
  position: absolute;
  padding: 1px;
}

.c2 .c8,
.c2 .c10,
.c2 .c12,
.c2 svg {
  box-sizing: border-box;
  min-width: 16px;
  width: 16px;
}

.c2 .c10:not([disabled]):focus + .c12,
.c2 .c10:not([disabled]):hover + .c12 {
  box-shadow: 0 0 0 3px #FFB500;
}

.c2 .c14 {
  width: auto;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c2 .c13 {
  margin-left: 16px;
  margin-top: 0;
  padding-left: 8px;
}

.c2 .c16 {
  position: relative;
  display: inline-block;
}

.c2 .c10:checked ~ .c12 svg path {
  fill: rgba(0,0,0,0.90);
}

.c0 {
  background-color: #FFFFFF;
  border-width: 0;
  border-bottom: 1px solid #CCD6DB;
  overflow: visible;
  padding: 10px 24px;
  text-align: left;
  text-overflow: ellipsis;
  vertical-align: middle;
  white-space: nowrap;
  width: 18px;
}

.c0:first-of-type {
  border-left: 1px solid #CCD6DB;
}

.c0:last-of-type {
  border-right: 1px solid #CCD6DB;
}

.c0 .c1 {
  padding-top: 0px;
}

<td
  className="c0"
  data-element="flat-table-checkbox-cell"
>
  <div
    className="c1 c2"
    data-component="checkbox"
    name="flat-table-checkbox"
    onClick={[Function]}
  >
    <div
      className="c3"
      name="flat-table-checkbox"
      onClick={[Function]}
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <input
              aria-describedby="guid-12345-help"
              aria-labelledby="guid-12345-label"
              className="c10 c11"
              id="guid-12345"
              name="flat-table-checkbox"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="checkbox"
              type="checkbox"
            />
            <div
              className="c12 "
            >
              <svg
                focusable="false"
                height="10"
                viewBox="0 0 12 10"
                width="12"
              >
                <path
                  d="M.237 6.477A.752.752 0 0 1 .155 5.47l.851-1.092a.63.63 0 0 1 .934-.088l2.697 1.964, 4.674-6a.63.63 0 0 1 .933-.088l1.015.917c.28.254.317.703.081 1.005L6.353 8.492a.725.725, 0 0 1-.095.16l-.85 1.093a.637.637 0 0 1-.626.244.638.638 0 0 1-.335-.16L.237 6.476z"
                  fill="#FFFFFF"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</td>
`;
